# opacity-avs-node

./: .env.example  .gitignore  .gitkeep  Cargo.toml  Dockerfile  Dockerfile.dockerignore  Dockerfile.local  Makefile  README.md  build.rs  buildspec.yml  compose.yml  create-cluster.sh  generate-notary-keys.sh  generate_certificate.sh  generate_notary_keys.sh  go.mod  go.sum  opacity-avs-node.manifest.template  register.sh  run-docker.sh  sgx-notary.manifest.template  start-container.sh  start-node.sh  start.sh
.github/workflows/: docker-build.yml  docker-image.yml
Kubernetes/: deployment.yaml
cli/: main.go
cli/actions/: register_operator_with_avs.go
config/: config.yaml  deployments.holesky.json  local.config.yaml  opacity.config.yaml  opacity.holesky.json
fixture/auth/: whitelist.csv
fixture/notary/: notary.key  notary.pub
fixture/operator/: opacity.bls.key.local.json
fixture/tls/: notary.crt  notary.csr  notary.ext  notary.key  rootCA.key  rootCA.pem  rootCA.srl
src/: bn254.rs  commitment_parser.rs  config.rs  domain.rs  error.rs  lib.rs  main.rs  register.rs  remote_bls_signer.rs  server.rs  server_tracing.rs  service.rs  util.rs  verifier.rs  wallet.rs
src/domain/: cli.rs
tests/: integration_test.rs
