[package]
name = "opacity-avs-node"
version = "0.0.1"
edition = "2021"

[dependencies]
async-trait = "0.1.67"
async-tungstenite = { version = "0.25", features = ["tokio-native-tls"] }
axum = { version = "0.7", features = ["ws"] }
axum-core = "0.4"
axum-macros = "0.4"
base64 = "0.21.0"
chrono = "0.4.31"
csv = "1.3.0"
eyre = "0.6.8"
futures = "0.3"
futures-util = "0.3.28"
http = "1.1"
hyper = { version = "1.1", features = ["client", "http1"] }
hyper-util = { version = "0.1", features = ["full"] }
notify = { version = "6.1.1", default-features = false, features = [
    "macos_kqueue",
] }
opentelemetry = { version = "0.19" }
p256 = { version = "0.13", features = ["ecdh", "serde"] }
rstest = "0.18"
rustls = { version = "0.21" }
rustls-pemfile = { version = "1.0.2" }
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9.21"
sha1 = "0.10"
structopt = "0.3.26"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tokio-rustls = { version = "0.24.1" }
tokio-util = { version = "0.7", features = ["compat"] }
tower = { version = "0.4.12", features = ["make"] }
tower-http = { version = "0.5", features = ["cors"] }
tower-service = "0.3.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.4.1", features = ["v4", "fast-rng"] }
ws_stream_tungstenite = { version = "0.13.0", features = ["tokio_io"] }
tlsn-verifier = { git = "https://github.com/OpacityLabs/tlsn.git", tag = "v0.1.0-alpha.6", package = "tlsn-verifier" }
ethers = "2.0.14"
reqwest = "0.12.5"
urlencoding = "2.1.3"
eth-bn254-keystore = { git = "https://github.com/OpacityLabs/eth-keystore-rs", branch = "bn254" }
ark-ff = { version = "0.4.2" }
ark-bn254 = { version = "0.4.0" }
ark-std = { version = "0.4.0" }
ark-ec = { version = "0.4.2" }
sha2 = { version = "0.10.6" }
num-bigint = "0.4.5"
alloy-chains = "0.1.15"
alloy-consensus = { version = "0.1", default-features = false }
alloy-contract = { version = "0.1", default-features = false }
alloy-dyn-abi = "0.7.2"
alloy-eips = { version = "0.1", default-features = false }
alloy-genesis = { version = "0.1", default-features = false }
alloy-json-rpc = { version = "0.1", default-features = false }
alloy-network = { version = "0.1", default-features = false }
alloy-node-bindings = { version = "0.1", default-features = false }
alloy-primitives = "0.7.2"
alloy-provider = { version = "0.1", default-features = false, features = [
    "reqwest",
    "ws",
] }
alloy-pubsub = { version = "0.1", default-features = false }
alloy-rlp = "0.3.4"
alloy-rpc-client = "0.1"
alloy-rpc-types = { version = "0.1", default-features = false, features = [
    "eth",
] }
alloy-rpc-types-admin = { version = "0.1", default-features = false }
alloy-rpc-types-anvil = { version = "0.1", default-features = false }
alloy-rpc-types-beacon = { version = "0.1", default-features = false }
alloy-rpc-types-engine = { version = "0.1", default-features = false }
alloy-rpc-types-eth = { version = "0.1", default-features = false }
alloy-rpc-types-trace = { version = "0.1", default-features = false }
alloy-rpc-types-txpool = { version = "0.1", default-features = false }
alloy-serde = { version = "0.1", default-features = false }
alloy-signer = { version = "0.1", default-features = false }
alloy-signer-aws = "0.1"
alloy-signer-local = { version = "0.1", default-features = false }
alloy-sol-types = "0.7.2"
alloy-transport = { version = "0.1" }
alloy-transport-http = { version = "0.1", features = [
    "reqwest-rustls-tls",
], default-features = false }
alloy-transport-ipc = { version = "0.1", default-features = false }
alloy-transport-ws = { version = "0.1", default-features = false }
alloy-trie = "0.4"
eigen-client-avsregistry = {git = "https://github.com/Layr-Labs/eigensdk-rs/"}
eigen-client-elcontracts = {git = "https://github.com/Layr-Labs/eigensdk-rs/"}
eigen-logging = { git = "https://github.com/Layr-Labs/eigensdk-rs/" }
eigen-testing-utils = { git = "https://github.com/Layr-Labs/eigensdk-rs/" }
eigen-crypto-bls = { git = "https://github.com/Layr-Labs/eigensdk-rs/" }
eigen-utils = { git = "https://github.com/Layr-Labs/eigensdk-rs/" }
lazy_static = "1.5.0"
rust-bls-bn254 = { git = "https://github.com/Layr-Labs/rust-bls-bn254.git", rev = "be3ef87", features = [
    "std",
] }
eth-keystore = "0.5.0"
hex = "0.4"
ecdsa = "0.13.0"
[dev-dependencies]
# specify vendored feature to use statically linked copy of OpenSSL
hyper-tls = { version = "0.5.0", features = ["vendored"] }
tlsn-prover = { git = "https://github.com/OpacityLabs/tlsn.git", tag = "v0.1.0-alpha.6", package = "tlsn-prover" }
tls-server-fixture = { git = "https://github.com/OpacityLabs/tlsn.git", tag = "v0.1.0-alpha.6", package = "tls-server-fixture" }
tls-core = { git = "https://github.com/OpacityLabs/tlsn.git", tag = "v0.1.0-alpha.6", package = "tlsn-tls-core" }
notary-client = { git = "https://github.com/OpacityLabs/tlsn.git", tag = "v0.1.0-alpha.6", package = "notary-client" }
tokio-native-tls = { version = "0.3.1", features = ["vendored"] }
http-body-util = "0.1"


[[bin]]
name = "register"
path = "src/register.rs"